--- a/BSTH/1013-OT-Scripture.tex
+++ b/BSTH/1013-OT-Scripture.tex
@@ -11,7 +11,7 @@
 \newcommand\incl{../includes}
 \input{\incl/variables}
 
-\coursecode[8.0-WIP]{BSTH 1013}
+\coursecode[8.5]{BSTH 1013}
 \coursetitle{Old Testament Scripture}
 
 % Previously taught as RLGS 1013 in:
@@ -29,19 +29,19 @@
 %   - Winter 2014
 %   - Fall 2014
 %   - Winter 2015
+%   - Fall 2015
 
 \professor{Daniel R. Driver}
 \phone{416-226-6620 ext. 2201}
 \email{ddriver@tyndale.ca}
-\officehours{Mon. \& Wed., 2:30--3:30 \PM}
+\officehours{Mon. \& Thur., 2:30--3:30 \PM}
 
-\semester{Fall 2015}
-\meets{Mon \& Wed}% \meets{on}{at}{in}
-      {3:45--5:05 \PM}
+\semester{Winter 2016}
+\meets{Tue. \& Thur.}% \meets{on}{at}{in}
+      {5:15--6:35 \PM}
       {Bayview E320}
 \website{classes.tyndale.ca}
 \cdescription{% copy from tyndale.ca/registrar/calendar
-
 	Survey of the redemptive story in the three major divisions of the
 	Old Testament (the Law/Torah, the Prophets, and the Writings),
 	including an orientation to the historical backgrounds, religious
@@ -51,45 +51,46 @@
 	{\itshape Note that this class is both a general studies requirement
 	and a prerequisite for advanced courses in Biblical Studies \&
 	Theology.}
-
 }% end of course description
+\objectives{% recall Bloom's taxonomy: http://www.celt.iastate.edu/teaching/RevisedBlooms1.html
+
+	The learning outcomes for this course are in part a function of each
+	student's ability to meet specific objectives. By the end of the
+	course students should be able to:
+		name major Old Testament people and events;
+		identify representative biblical quotes by book and chapter;
+		give key dates for Israel's history and summarize the succession of superpowers in the Ancient Near Eastern political theatre from the time of Egypt to Greece;
+		locate a few important biblical sites on a map;
+		classify prophetic literature relative to the exile;
+		recognize genres of biblical literature and cite examples from the reading;
+		understand the general shape of the Masoretic Text tradition and differentiate it from other canonical orders;
+%		list the Ten Commandments in order;
+%		defend a decision to pronounce or circumlocute the divine name;
+		report on parallel and divergent material across the Law and the Prophets;
+		articulate multiple rationales for sabbath observance;
+		memorize and recite Psalm 8.
+
+	Students should also be able to identify settings in which the
+	scriptures of Israel are read (notably the synagogue, church, and
+	academy), employ terminology appropriate to these reading
+	communities, recognize where their own biographies and commitments
+	place them in relation to the Hebrew Bible/Old Testament and its
+	uses, and monitor and test their individual attitudes and
+	assumptions. They should be able to extend their awareness of the
+	Bible's reading communities to the Bible's long history of
+	reception. Finally, students should be able to infer what Jesus
+	might have meant in speaking of ``the law of Moses, the prophets,
+	and the psalms'' (Luke 24:44), and begin to hear claims about New
+	Testament fulfilment of scripture in light of the unique voice that
+	the Old Testament retains along side of the New in Christian
+	scripture.
+
+}% end of learning objectives
 
 \input{\incl/preamble}
 
 \begin{document}
 \input{\incl/title}
-
-\section{Learning Outcomes}
-\label{outcomes}
-
-The learning outcomes for this course are in part a function of each
-student's ability to meet specific objectives. By the end of the course
-students should be able to:
-	name major Old Testament people and events;
-	identify representative biblical quotes by book and chapter;
-	give key dates for Israel's history and summarize the succession of superpowers in the Ancient Near Eastern political theatre from the time of Egypt to Greece;
-	locate a few important biblical sites on a map;
-	classify prophetic literature relative to the exile;
-	recognize genres of biblical literature and cite examples from the reading;
-	understand the general shape of the Masoretic Text tradition and differentiate it from other canonical orders;
-%	list the Ten Commandments in order;
-%	defend a decision to pronounce or circumlocute the divine name;
-	report on parallel and divergent material across the Law and the Prophets;
-	articulate multiple rationales for sabbath observance;
-	memorize and recite Psalm 8.
-
-Students should also be able to identify settings in which the
-scriptures of Israel are read (notably the synagogue, church, and
-academy), employ terminology appropriate to these reading communities,
-recognize where their own biographies and commitments place them in
-relation to the Hebrew Bible/Old Testament and its uses, and monitor and
-test their individual attitudes and assumptions. They should be able to
-extend their awareness of the Bible's reading communities to the Bible's
-long history of reception. Finally, students should be able to infer
-what Jesus might have meant in speaking of ``the law of Moses, the
-prophets, and the psalms'' (Luke 24:44), and begin to hear claims about
-New Testament fulfilment of scripture in light of the unique voice that
-the Old Testament retains along side of the New in Christian scripture.
 
 \section{Required Texts \& Materials}
 \label{texts}
@@ -106,15 +107,14 @@ coursepack is available in class, directly from Dr. Driver.
     \emph{The Jewish Study Bible: Second Edition}.
     Oxford / New York: Oxford University Press, 2014.
     ISBN 978-0199978465.
-	Many serviceable translations of the Bible exist, including the NRSV
-	and ESV. The NJPS allows students in this course to better
-	appreciate the relationship of the first part of Christian Scripture
-	to the Scriptures of Israel (also called the Hebrew Bible), which is
-	one of the course's fundamental objectives. In addition, this
-	revised study Bible contains an outstanding set of introductory
-	notes and essays in a highly readable, single-column format. It is
-	required.
-
+%	Many serviceable translations of the Bible exist, including the NRSV
+%	and ESV. The NJPS allows students in this course to better
+%	appreciate the relationship of the first part of Christian Scripture
+%	to the Scriptures of Israel (also called the Hebrew Bible), which is
+%	one of the course's fundamental objectives. In addition, this
+%	revised study Bible contains an outstanding set of introductory
+%	notes and essays in a highly readable, single-column format. It is
+%	required.
 
 %	\bibitem[Heschel]{heschel} Abraham Joshua Heschel. \emph{The
 %	Sabbath: Its Meaning for Modern Man}. New York: Farrar, Straus and
@@ -139,15 +139,104 @@ Supplementary readings are listed in the bibliographies that follow each
 page of notes in the coursepack. Excerpts from this literature,
 ordinarily an article or a book chapter per week, will either be made
 available for download through the course website, or else be designated
-from the introductory essays included in the NJPS Study Bible. Students
-are not strictly required to read this material; then again, students
-who choose not to read it should not expect to get an A for the course.
+from the introductory essays included in the NJPS Study Bible.
 
-Note that the required readings for this survey emphasize a selection of
-primary texts from the Old Testament. Reading in the vast body of
-secondary literature on the Bible is largely left for upper-division
-courses. Diligent students, however, and all prospective majors, will
-make a special point of reviewing the designated supplementary texts.
+Students are not strictly required to read this material; then again,
+students who choose not to read it should not expect to get an A for the
+course.
+%Note that the required readings for this survey emphasize a selection of
+%primary texts from the Old Testament. Reading in the vast body of
+%secondary literature on the Bible is largely left for upper-division
+%courses.
+Diligent students, and all prospective majors, should make a special
+point of reviewing the designated supplementary texts.
+
+\section{Course Outline}
+\label{outline}
+
+Readings should be completed before the start of the class for which
+they are assigned. We will adhere to the schedule in
+Table~\ref{schedule} (below) as closely as possible, though I reserve
+the right to adjust it to suit the needs of the class.
+
+%Readings should be completed before the start of the class for which
+%they are assigned. Primary readings (from scripture) and required
+%secondary texts (Heschel and Moberly) are compulsory. Any supplementary
+%readings that I circulate (per Section~\ref{supplementary}) will be
+%keyed to the session number (listed under \textbf{\S} in
+%Table~\ref{schedule}), and should ideally be read before class as well.
+%We will adhere to the schedule as closely as possible, though I reserve
+%the right to adjust it to suit the needs of the class.
+
+\setcolumncount{4}% set up \sessioncount, \unit{}, \noclass{}, and \reminder{memo}{date} macros
+\begin{table}[p]% add p to put the schedule on its own page
+  \centering
+  \begin{tabular}{>{\sessioncount.}r@{ }llr}% make sure the column config agrees with \setcolumncount
+	\toprule
+	\sessionskip{\textbf{\S}.}&\textbf{Primary Reading}&\textbf{Secondary Reading}&\textbf{Date}\\
+	\midrule
+
+	\unit{Beginnings} \\
+
+		& Psalms 8, 74, 104               & Syllabus         &  5 Jan.        \\
+		& Genesis 1--3                    & P. Enns          &  7 Jan.        \\ [1ex]
+
+		& Genesis 4--25                   &                  & 12 Jan.        \\
+		& Genesis 26--50                  & J. Levenson      & 14 Jan.        \\ [1ex]
+
+		& Exodus 1--6, 32--34             &                  & 19 Jan.        \\
+		& Exodus 7--18                    & C. Mathews McGinnis  & 21 Jan.    \\ [1ex]
+
+	\unit{Legal Traditions} \\
+
+	\reminder{\textbf{Recitation of Psalm 8} (during Dr. Driver's office hours)}{\emph{from} 26 Jan.} \\
+		& Exodus 19--24                   & D. Patrick       & 26 Jan.        \\
+		& Exodus 20, Deuteronomy 5        &                  & 28 Jan.        \\ [1ex]
+
+    	& Deuteronomy 1--11               &                  &  2 Feb.        \\
+		& Deuteronomy 12--26              & B. Levinson      &  4 Feb.        \\ [1ex]
+
+		& Deuteronomy 27--34              &                  &  9 Feb.        \\
+		& \textbf{Midterm Exam} (given in class) &           & 11 Feb.        \\ [1ex]
+
+	\noclass{Reading Week}                                   & 15--19 Feb.    \\ [1ex]
+
+	\unit{Former Prophets} \\
+
+		& Joshua 1--13:7, 22--24          & D. Earl          & 23 Feb.        \\
+		& Judges 1--16, 19--21            &                  & 25 Feb.        \\ [1ex]
+
+		& 1 Samuel 1--15                  &                  &  1 Mar.        \\
+		& 1 Samuel 16--31, 2 Samuel 1--12 & M. Sweeney       &  3 Mar.        \\ [1ex]
+
+		& 1 Kings 1--14                   &                  &  8 Mar.        \\
+		& 2 Kings 17--25                  & O. Lipschits     & 10 Mar.        \\ [1ex]
+
+	\unit{Latter Prophets} \\
+
+		& Isaiah 1--12, 36--39            &                  & 15 Mar.        \\
+		& Isaiah 40-54                    & B. Sommer        & 17 Mar.        \\ [1ex]
+
+        & Hosea, Joel, Amos               &                  & 22 Mar.        \\
+		& Jonah, Micah, Nahum             & E. Ben Zvi       & 24 Mar.        \\ [1ex]
+
+	\unit{Wisdom \& Praise} \\
+
+		& Ecclesiastes 1--12              &                  & 29 Mar.        \\
+		& Psalms 1--2, 72--73, 89--90, 104--106 & M. Cameron & 31 Mar.        \\ [1ex]
+
+	\noclass{Reading Day}                                    &  5 Dec.        \\ [1ex]
+	\reminder{\textbf{Final Exam} (as schedule by the Registrar)}{9--16 Dec.} \\
+	\bottomrule
+  \end{tabular}
+  \caption{Schedule of Readings}
+  \label{schedule}
+\end{table}
+
+See the Registrar's website for a list of other
+\href{http://www.tyndale.ca/registrar/important-dates}{important dates}.
+The last day to add a class, or to drop one without penalty, is
+ordinarily the end of the term's second week.
 
 \section{Evaluation}
 \label{evaluation}
@@ -176,14 +265,14 @@ make a special point of reviewing the designated supplementary texts.
 
 	\item A comprehensive \textbf{final exam} will be held during the
 	exam period as schedule by the Registrar (see Section~\ref{exams}).
-	It is designed to assess learning outcomes, i.e., your attainment of
-	the objectives in Section~\ref{outcomes}. Test your readiness for
-	the final by asking yourself how well you can perform the tasks
-	outlined in those paragraphs.
+	It is designed to assess your attainment of the objectives in
+	Section~\ref{objectives}. Test your readiness for the final by
+	asking yourself how well you can perform the tasks outlined in those
+	paragraphs.
 
 \end{enumerate}
 
-The breakdown for the semester's total work is as follows:
+The breakdown for the semester's total work is shown in Table~\ref{distribution} (below).
 
 \begin{table}[htbp]
   \centering
@@ -217,89 +306,6 @@ The breakdown for the semester's total work is as follows:
 \input{\policy/technology}
 
 \input{\policy/support}
-
-\section{Course Outline}
-\label{outline}
-
-Readings should be completed before the start of the class for which
-they are assigned. Primary readings (from scripture) and required
-secondary texts (Heschel and Moberly) are compulsory. Any supplementary
-readings that I circulate (per Section~\ref{supplementary}) will be
-keyed to the session number (listed under \textbf{\S} in
-Table~\ref{schedule}), and should ideally be read before class as well.
-We will adhere to the schedule as closely as possible, though I reserve
-the right to adjust it to suit the needs of the class.
-
-\setcolumncount{4}% set up \sessioncount, \unit{}, \noclass{}, and \reminder{memo}{date} macros
-\begin{table}[htb]% add p to put the schedule on its own page
-  \centering
-  \begin{tabular}{>{\sessioncount.}r@{ }llr}% make sure the column config agrees with \setcolumncount
-	\toprule
-	\sessionskip{\textbf{\S}.}&\textbf{Primary Reading}&\textbf{Secondary Reading}&\textbf{Date}\\
-	\midrule
-
-	\unit{Beginnings} \\
-
-		& Psalms 8, 74, 104               & Syllabus         & 14 Sep.        \\
-		& Genesis 1--11                   & P. Enns          & 16 Sep.        \\ [1ex]
-
-		& Genesis 12--36                  &                  & 21 Sep.        \\
-		& Genesis 37--50                  & J. Levenson      & 23 Sep.        \\ [1ex]
-
-		& Exodus 1--6, 32--34             &                  & 28 Sep.        \\
-		& Exodus 7--18                    & C. Mathews McGinnis  & 30 Sep.    \\ [1ex]
-
-	\unit{Legal Traditions} \\
-
-	\reminder{\textbf{Recitation of Psalm 8} (during Dr. Driver's office hours)}{\emph{from} 5 Oct.} \\
-		& Exodus 19--24                   & D. Patrick       &  5 Oct.        \\
-		& Deuteronomy 1--11               &                  &  7 Oct.        \\ [1ex]
-
-    \noclass{Thanksgiving}                                   & 12 Oct.        \\
-		& Deuteronomy 12--26              & B. Levinson      & 14 Oct.        \\ [1ex]
-
-		& Deuteronomy 27--34              &                  & 19 Oct.        \\
-		& \textbf{Midterm Exam} (given in class) &           & 21 Oct.        \\ [1ex]
-
-%	\noclass{Reading Week}                                   & 26 Oct.        \\ [1ex]
-
-	\unit{Former Prophets} \\
-
-		& Joshua 1--13:7, 22--24          & D. Earl          & 26 Oct.        \\
-		& Judges 1--16, 19--21            &                  & 28 Oct.        \\ [1ex]
-
-		& 1 Samuel 1--15                  &                  &  2 Nov.        \\
-		& 1 Samuel 16--31, 2 Samuel 1--12 & M. Sweeney       &  4 Nov.        \\ [1ex]
-
-		& 1 Kings 1--14                   &                  &  9 Nov.        \\
-		& 2 Kings 17--25                  & O. Lipschits     & 11 Nov.        \\ [1ex]
-
-	\unit{Latter Prophets} \\
-
-		& Isaiah 1--12, 36--39            &                  & 16 Nov.        \\
-		& Isaiah 40-54                    & B. Sommer        & 18 Nov.        \\ [1ex]
-
-        & Hosea, Joel, Amos               &                  & 23 Nov.        \\
-		& Jonah, Micah, Nahum             & E. Ben Zvi       & 25 Nov.        \\ [1ex]
-
-	\unit{Wisdom \& Praise} \\
-
-		& Ecclesiastes 1--12              &                  & 30 Nov.        \\
-		& Proverbs 1--9, 30--31           & M. Fox           &  2 Dec.        \\ [1ex]
-
-		& Psalms 1--2, 72--73, 89--90, 104--106 & M. Cameron &  7 Dec.        \\
-	\noclass{Reading Day}                                    &  8 Dec.        \\ [1ex]
-	\reminder{\textbf{Final Exam} (as schedule by the Registrar)}{9--16 Dec.} \\
-	\bottomrule
-  \end{tabular}
-  \caption{Schedule of Readings}
-  \label{schedule}
-\end{table}
-
-See the Registrar's website for a list of other
-\href{http://www.tyndale.ca/registrar/important-dates}{important dates}.
-The last day to add a class, or to drop one without penalty, is
-ordinarily the end of the term's second week.
 
 \section{Course Bibliography}
 \label{bibliography}
