--- a/HEBR/2023-Hebrew-II.tex
+++ b/HEBR/2023-Hebrew-II.tex
@@ -11,23 +11,23 @@
 \newcommand\incl{../includes}
 \input{\incl/variables}
 
-\coursecode[4.0]{HEBR 2013}
-\coursetitle{Introduction to Biblical Hebrew I}
+\coursecode[4.0]{HEBR 2023}
+\coursetitle{Introduction to Biblical Hebrew II}
 
 \professor{Daniel R. Driver}
 \phone{416.226.6620 x2201}
 \email{ddriver@tyndale.ca}
-\officehours{Mon. \& Wed., 2:30--3:30 \PM}
+\officehours{Mon. \& Thur., 2:30--3:30 \PM}
 
-\semester{Fall 2015}
+\semester{Winter 2016}
 \meets{Mondays \& Thursdays}% \meets{on}{at}{in}
       {11:15 \AM--12:35 \PM}
-      {Bayview E221}
+      {Bayview G205}
 \website{classes.tyndale.ca}
 \cdescription{% copy from tyndale.ca/registrar/calendar
-	An introduction to the basic principles of biblical Hebrew with
-	emphasis on morphology, phonology, and syntax. Exclusion:
-	\textsc{hebr} 101.
+	A more detailed study of Hebrew grammar and syntax through the
+	reading of selected portions of the Hebrew Old Testament.
+	Prerequisite: \textsc{hebr} 201. Exclusion: \textsc{hebr} 102.
 }% end of course description
 \objectives{% recall Bloom's taxonomy: http://www.celt.iastate.edu/teaching/RevisedBlooms1.html
 
@@ -70,9 +70,14 @@ All required textbooks are available in the Tyndale Bookstore.
 
     \bibitem[BSH]{bhs}
     \emph{Biblia Hebraica Stuttgartensia}. Paperback\slash Student ed.
-    Stuttgart: Deutsche Bibel\-ge\-sell\-schaft, 1997.  Students will be asked to
-    have a criticial edition of the Hebrew Bible by the start of the Winter
-    semester. The instructor will provide photocopies in the interim.
+    Stuttgart: Deutsche Bibel\-ge\-sell\-schaft, 1997. Serious students
+    will want their own copy of the standard critical edition of the
+    Hebrew Bible. The instructor will also provide photocopies.
+
+    \bibitem[BDB]{bdb}
+    Francis Brown, S.\,R. Driver and C.\,A. Briggs. \emph{The
+    Brown-Driver-Briggs Hebrew and English Lexicon}. Peabody, Mass:
+    Hendrickson, 2004 (orig. ed. 1906).
 
 \end{thebibliography}
 \endgroup
@@ -164,42 +169,38 @@ the right to adjust it to suit the needs of the class.
     \toprule
     \bfseries\S & \textbf{Grammar Lesson}                                         & \textbf{Date} \\
     \midrule
-    1   & \texthebrew{שׁלום}, The Consonants                               & 10 Sept. \\
-    2   & The Vowels                                                      & 14 Sept. \\
-    3   & \texthebrew{שׁוא} (\emph{Shəva})                                 & 17 Sept. \\
-    4   & \texthebrew{דגשׁ} (\emph{Dagesh})                                &          \\
-    5   & Subject Pronouns: Singular                                      & 21 Sept. \\
-    7   & Copular Clauses                                                 & 24 Sept. \\
-    6   & Nouns: Singular                                                 &          \\
-    8   & The Article \texthebrew{ה} and the Interrogative \texthebrew{ה} & 28 Sept. \\
-    9   & \texthebrew{ל} of Possession: Singular                          & 1 Oct.   \\
-    r-1 & \texthebrew{מקרא א} (Reading 1)                                & 5 Oct.   \\
-    10  & Nouns: Plural and Dual                                          & 8 Oct.   \\
-    11  & Subject Pronouns: Plural                                        &          \\
-    \noclass{Thanksgiving}                                                & 12 Oct.  \\
-    12  & \texthebrew{ישׁ} and \texthebrew{אין}                            & 15 Oct.   \\
-    13  & Conjunction \texthebrew{ו} and Prepositions \texthebrew{בּ},
-         \texthebrew{כּ}, \texthebrew{ל}, \texthebrew{מן}                  & 19 Oct.  \\
-    14  & \texthebrew{שׁאלוח} (Questions)                                  &          \\
-    \noclass{Reading Day}                                                 & 22 Oct.  \\
-    \sessionskip{\rarr} & \textbf{Midterm Exam}                           & 26 Oct.  \\
-    r-2 & \texthebrew{מקרא ב} (Genesis 3\texthebrew{א})                   & 29 Oct.  \\
-    15  & Verbs: A Preview                                                & 2 Nov.  \\
-    16  & \texthebrew{קל} Perfect Conjugation: Singular                   &          \\
-    17  & \texthebrew{ל} of Possession: Plural                            & 5 Nov.   \\
-    18  & Word Order                                                      &          \\
-    r-3 & \texthebrew{מקרא ג} (Genesis 22\texthebrew{א})                  & 9 Nov.   \\
-    19  & \texthebrew{קל} Perfect Conjugation: Plural                     & 12 Nov.  \\
-    20  & \texthebrew{סמיכות} (Bound Nouns)                               &          \\
-    21  & The Irreal Use of the Perfect Conjugation                       & 16 Nov.  \\
-    22  & Attached Pronouns: Singular                                     & 19 Nov.  \\
-    23  & \texthebrew{קל} Imperfect Conjugation: Singular                 &          \\
-    r-4 & \texthebrew{מקרא ד} (Genesis 37\texthebrew{א})                  & 23 Nov.  \\
-    24  & The Infinitive                                                  & 26 Nov.  \\
-    25  & The Adverbial Infinitive                                        &          \\
-    26  & Objects                                                         & 30 Nov.  \\
-    r-5 & \texthebrew{מקרא ד} (Genesis 3\texthebrew{ב})                   & 3 Dec.   \\
-    \sessionskip{\rarr} & Review for the \textbf{Final Exam}              & 7 Dec.   \\
+    27, 28  & \texthebrew{‫קַל‬} Imperfect Conjugation: Plural;
+    		  \texthebrew{‫קַל‬} Imperfect Conjugation of \texthebrew{‫הָיָה‬}\null         &  4 Jan.     \\
+    29      & \texthebrew{‫בִּנְיָנִים: פִּעֵל וְהִפְעִיל‬}\null                                       &  7 Jan.     \\ \addlinespace
+    30, r-6 & Main and Subordinate Clauses; Reading 6 (Genesis 22\texthebrew{ב})\null    & 11 Jan.     \\
+    31      & Attached Pronouns: Plural                                                  & 14 Jan.     \\ \addlinespace
+    32, 33  & Adjectives; Demonstrative Pronouns                                         & 18 Jan.     \\
+	34      & \texthebrew{‫סְגֹלֶת‬} Noun Pattern                                           & 21 Jan.     \\ \addlinespace
+    r-7, 35 & Reading 7 (Genesis 37\texthebrew{ב}); Past Narrative Conjugation           & 25 Jan.     \\
+    36      & \texthebrew{‫וַיְהִי‬}\null                                                    & 28 Jan.     \\ \addlinespace
+    37, 38  & \texthebrew{‫בִּנְיָנִים: נִפְעַל וְהִתְפַּעֵל‬}; Dynamic and Stative Verbs               &  1 Feb.     \\
+    r-8     & Reading 8 (Genesis 3\texthebrew{ג})\null                                   &  4 Feb.     \\ \addlinespace
+    \sessionskip{\rarr} & \textbf{Midterm Exam}                                          &  8 Feb.     \\
+    39, 40  & Jussives and Imperatives; Attached Pronouns with Verbs                     & 11 Feb.     \\
+
+    \midrule
+    \noclass{Reading Week}                                                               & 15--19 Feb. \\
+    \midrule
+
+    41, r-9 & Word Order with Topic and Focus; Reading 9 (Genesis 22\texthebrew{ג})\null & 22 Feb.     \\
+    42      & Participles                                                                & 25 Feb.     \\ \addlinespace
+    43, 44  & Foreground and Background of Narrative; The Verbal System                  & 29 Feb.     \\
+    r-10    & Reading 10 (Genesis 37\texthebrew{ג})\null                                 &  3 Mar.     \\ \addlinespace
+    45, 46  & Numerals; Topic                                                            &  7 Mar.     \\
+    r-11    & Reading 11 (Genesis 1)                                                     & 10 Mar.     \\ \addlinespace
+    47, 48  & Accents; Complements and Adjuncts                                          & 14 Mar.     \\
+    r-12    & Reading 12 (Genesis 47)                                                    & 17 Mar.     \\ \addlinespace
+    49, 50  & Case Relations; Lexical Semantics                                          & 21 Mar.     \\
+    r-13    & Reading 13 (Genesis 50)                                                    & 24 Mar.     \\ \addlinespace
+    r-14    & Jonah 1--2                                                                 & 28 Mar.     \\
+    r-14    & Jonah 2--3                                                                 & 31 Mar.     \\ \addlinespace
+    r-14    & Jonah 4                                                                    &  4 Apr.     \\
+    \sessionskip{\rarr} & \textbf{Final Exam: TBA}                                       & 6--13 Apr.  \\
     \bottomrule
   \end{tabular}
   \caption{Schedule of Readings}
