--- a/includes/title.tex
+++ b/includes/title.tex
@@ -28,38 +28,17 @@
 
     \begin{tabular}{>{\bfseries}rl>{\bfseries}rl}
       \toprule
-      Instructor & \prof, \pdegree & Course  & Version \cversion \\
+      Professor & \prof, \pdegree & Course  & Version \cversion \\
       \midrule
-      Phone      & \pphone         & Meets   & \cmeetson         \\
-      Email      & \pemail         & Time    & \cmeetsat         \\
-      Office     & \poffice        & Room    & \cmeetsin         \\
-      Hours      & \phours         & Website & \cwebsite         \\
+      Phone     & \pphone         & Meets   & \cmeetson         \\
+      Email     & \pemail         & Time    & \cmeetsat         \\
+      Office    & \poffice        & Room    & \cmeetsin         \\
+      Hours     & \phours         & Website & \cwebsite         \\
       \bottomrule
     \end{tabular}
 
     \vfill
     \rmfamily % switch back to default serif
-
-    \begin{description}\footnotesize
-      \item[Commuter Hotline]
-        Class cancellations due to inclement weather or illness will be
-        announced on the commuter hotline at
-        {\lining 416-226-6620 ext. 2187}.
-        Weather information is also posted at
-        \href{http://tyndale.ca/weather}{tyndale.ca/weather}.
-      \item[MyTyndale.ca]
-        This course may have materials stored on its website, such as
-        handouts or readings that may be needed in order to complete
-        assignments. Students are responsible for checking these course
-        pages on a regular basis. Here, too, students are able to view
-        their grades throughout the semester. For more information see
-        Section~\ref{lms}, below.
-      \item[Mail]
-        Students are responsible for information communicated through
-        their campus mailboxes and student e-mail accounts. A mailbox
-        directory hangs beside the mailboxes. For more information
-        contact the Registrar's office.
-    \end{description}
 
   \end{center}
 
@@ -67,6 +46,11 @@
   \label{description}
 
   \emph{From the Academic Calendar:} \cdescrip
+
+  \section{Learning Objectives}
+  \label{objectives}
+
+  \edobject
 
 \end{titlepage}
 \setcounter{page}{2} % count the title page as page 1
