--- a/includes/variables.tex
+++ b/includes/variables.tex
@@ -21,6 +21,7 @@
 \newcommand\cmeetsin{}
 \newcommand\cwebsite{}
 \newcommand\cdescrip{}
+\newcommand\edobject{}
 
 % commands for setting variables in the preamble
 \newcommand\professor[2][PhD]{
@@ -54,3 +55,5 @@
   \renewcommand\cwebsite{\href{http://#1}{#1}\xspace}}
 \newcommand\cdescription[1]{
   \renewcommand\cdescrip{#1\par}}
+\newcommand\objectives[1]{
+  \renewcommand\edobject{#1\par}}
