--- a/policy/academic_calendar.tex
+++ b/policy/academic_calendar.tex
@@ -1,7 +1,7 @@
-\ProvidesFile{academic_calendar.tex}[2013/08/19 v1.0 -- Course policy]
+\ProvidesFile{academic_calendar.tex}[2015/09/10 v1.1 -- Course policy]
 
 \newcommand{\AC}{Academic Calendar}
-\newcommand{\SecAC}{Section~5 of the \AC}
+\newcommand{\SecAC}{the \AC}% Starting in 2015, the AC no longer has sections!
 
 All policy in Sections~\ref{policy}, \ref{expectations} and \ref{support} of
 this syllabus applies to this course in addition to policy in the current
