--- a/policy/assignments.tex
+++ b/policy/assignments.tex
@@ -13,7 +13,7 @@ Student Supplement}.)
 If you ever struggle with composition---anything from the relatively simple
 matters of spelling, grammar and proper citation to deeper-level issues of
 tone, structure and argument---then please make use of the Writing Centre (see
-Section~\ref{writing_centre}). Experienced writers know that drafts and peer
+Section~\ref{centre}). Experienced writers know that drafts and peer
 feedback are integral to the writing process. Inexperienced writers are often
 unaware that their surface-level errors create credibility problems with their
 readers. When you \href{http://theoatmeal.com/comics/misspelling}{misspell
