--- a/policy/exams.tex
+++ b/policy/exams.tex
@@ -34,7 +34,7 @@ summarized below for emphasis.
 %        while examinations are being written.
 %      \item
 %        No student will be permitted to write beyond the allotted time without
-%        special permission of the Registrar (see Section~\ref{accommodation}).
+%        special permission of the Registrar (see Section~\ref{accessibility}).
 %    \end{enumerate}
   \item
     Provisions exist for students who are justifiably unable to write the final
