--- a/policy/support.tex
+++ b/policy/support.tex
@@ -3,21 +3,25 @@
 \section{Student Support}
 \label{support}
 
-\subsection{Tyndale Writing Centre}
-\label{writing_centre}
+\subsection{The Centre for Academic Excellence}
+\label{centre}
 
-Through a combination of tutorials, workshops and resources, Tyndale’s Writing
-Centre offers a comprehensive program of writing support to Tyndale students,
-including individual 30-minute tutoring sessions. Students may bring essays that
-have been graded (and, at least for my classes, essays that have not yet been
-submitted for a grade) and will receive detailed suggestions for improving their
-writing. This service, at no charge to students, is available by appointment.
+The Centre for Academic Excellence has been established to help students
+achieve their potential as learners. Staffed by a team of skilled and
+approachable student assistants, the Centre for Academic Excellence
+offers two kinds of support: Academic Tutoring (for Tyndale
+Undergraduate students [excluding B.Ed.] in multiple areas of study) and
+Writing Consultation (for all students of Tyndale University College \&
+Seminary).
 
-Professors may recommend that a student go to the Writing Centre for help:
-students are strongly encouraged to follow such recommendations. The Academic
-Standards Committee may require an undergraduate student who is experiencing
-difficulty in his or her academic program to go to the Writing Centre for
-assistance and support. Many top students also elect to go.
+Students at all levels of ability can profit from the Centre’s free
+services by booking one-on-one sessions, attending workshops and group
+study sessions, and accessing resources both online and at the Centre.
+Those students who are interested in joining the team of academic tutors
+and writing consultants may contact the Academic Excellence Director for
+further details. To learn more about these services or to book an
+appointment, read below, drop by and speak to the staff, or visit the
+\href{http://www.tyndale.ca/academic-excellence}{Centre's website}.
 
 \subsection{Tyndale UC Tutoring Program}
 \label{tutoring}
@@ -34,16 +38,29 @@ interested in becoming peer tutors, students may contact the Office of the
 Senior Vice President Academic or their respective University College department
 chairs.
 
-\subsection{Accommodation}
-\label{accommodation}
+\subsection{Accessibility Services}
+\label{accessibility}
 
-Students with documented disabilities may be granted special accommodation for
-exams, and in some cases for other assignments. It is even possible to get
-permission to use a laptop in class (Section~\ref{laptops}), although I will
-need to be convinced of the use case. It is up to the student to contact the
-Dean of Students as early as possible in the semester---not later than the
-second week---and to document the need. The Dean of Students will then advise
-each of the student's professors of the accommodations that may be required.
-Please note that special arrangements for assignments need to be made with me
-well in advance of assignment due dates (Section~\ref{deadlines}). Timely
-requests shall not unreasonably be denied.
+Tyndale University College \& Seminary is committed to creating an
+environment where students with disabilities are able to fully
+participate and integrate into the academic setting. Through
+accommodation and learning supports, Tyndale strives to allow each
+student to reach his or her academic potential.
+
+Disabilities can be permanent, temporary, and/or episodic in nature and
+may include learning disabilities, sensory impairments, acquired brain
+injuries, attention-deficit disorders, mental health disabilities,
+medical, and mobility issues.
+
+Students living with a disability are encouraged by the Accessibility
+Services Office to schedule a confidential registration appointment. The
+Accessibility Specialist will meet with each student, review
+documentation and collaboratively discuss and/or implement appropriate
+academic accommodations. To ensure that an accommodation plan is active
+when classes begin, this appointment must be arranged as soon as
+possible, preferably prior to the start of the semester.
+
+Documentation is required and assessment must be conducted by a trained
+professional to diagnose the condition. For more information regarding
+documentation requirements, please contact the Accessibility Services
+Office.
