--- a/textbook_requisitions.tex
+++ b/textbook_requisitions.tex
@@ -10,20 +10,18 @@
 \frenchspacing
 
 
-\title{Fall 2015 Textbook Requisitions}
+\title{Winter 2016 Textbook Requisitions}
 \author{Daniel R. Driver (ddriver@tyndale.ca)}
-\date{Submitted to the Tyndale Bookstore on 18 June 2015}
+\date{Submitted to the Tyndale Bookstore on 21 October 2015}
 
 \begin{document}
 
 \maketitle
 
 Please order the following textbooks for my three classes next semester.
-Note that one of these (BSTH 440/315) will be offered at two different
-credit levels. All textbooks are \textbf{required} unless otherwise
-stated.
+All textbooks are \textbf{required} unless otherwise stated.
 
-\section{\textsc{bsth} 1013: Old Testament Scripture (51/75 students enrolled)}
+\section{\textsc{bsth} 1013: Old Testament Scripture (48/75 students enrolled)}
 
 \begin{description}
 
@@ -36,32 +34,31 @@ stated.
 
 \end{description}
 
-\section{\textsc{bsth} 4403: \textsc{tobith} -- Ecclesiastes (4/12 students enrolled);
-also cross-listed as \textsc{bsth} 3153: Writings (?/35 students enrolled)}
+\section{\textsc{bsth} 3213: Ten Commandments (26/35 students enrolled)}
 
 \begin{description}
 
-	\item[978-0199229970] Samuel Johnson, ed. by Thomas Keymer.
-	\emph{The History of Rasselas, Prince of Abissinia} (new edition).
-	Oxford / New York: Oxford University Press, 2009.
+	\item[978-0664234904] Jeffrey P. Greenman and Timothy Larsen, eds.
+	\emph{The Decalogue through the Centuries: From the Hebrew Scriptures to Benedict XVI}.
+	Westminster John Knox Press, 2012.
 
-	\item[978-0470674918] Eric S. Christianson.
-    \emph{Ecclesiastes Through the Centuries} (paperback).
-    Chichester, West Sussex: Wiley-Blackwell, 2012.
+	\item[978-0300178715] Michael Coogan.
+    \emph{The Ten Commandments: A Short History of an Ancient Text}.
+    Yale University Press, 2014.
 
-	\item[978-1575062815] Katharine Dell.
-	\emph{Interpreting Ecclesiastes: Readers Old and New}.
-	Winona Lake, Indiana: Eisenbrauns, 2013.
+	\item[978-0802829658] Roger E. Van Harn, ed.
+	\emph{The Ten Commandments for Jews, Christians, and Others}.
+	Wm. B. Eerdmans, 2007.
 
 \end{description}
 
-\section{\textsc{hebr} 2013: Intro to Biblical Hebrew I (8/35 students enrolled)}
+\section{\textsc{hebr} 2023: Intro to Biblical Hebrew II (8/35 students enrolled)}
 
 \begin{description}
 
-	\item[978-0801048869] John A. Cook and Robert D. Holmstedt.
-	\emph{Beginning Biblical Hebrew: A Grammar and Illustrated Reader}.
-	Grand Rapids: Baker Academic, 2013.
+	\item[978-1565632066] Francis Brown, S. R. Driver, and Charles A. Briggs.
+	\emph{The Brown-Driver-Briggs Hebrew and English Lexicon}.
+	Hendrickson, 1994.
 
 \end{description}
 
