--- a/BSTH/4403-Ecclesiastes.tex
+++ b/BSTH/4403-Ecclesiastes.tex
@@ -11,8 +11,8 @@
 \newcommand\incl{../includes}
 \input{\incl/variables}
 
-\coursecode[1.0-WIP]{BSTH 4403: Topics in Biblical Theology}
-\coursetitle[Cross-listed as \textsc{bsth} 3153: Writings]{Ecclesiastes}
+\coursecode[1.0]{BSTH 4403}
+\coursetitle[Topics in Biblical Theology]{Ecclesiastes}
 
 \professor{Daniel R. Driver}
 \phone{416.226.6620 x2201}
@@ -25,98 +25,35 @@
       {Bayview G205}
 \website{classes.tyndale.ca}
 \cdescription{% copy from tyndale.ca/registrar/calendar
-
-	\textsc{bsth} 4403: A seminar style course involves the advanced
-	study of a particular topic or figure in biblical theology that will
-	change from year to year. It can be taken more than once for credit,
-	provided that the topics are different. Students will be expected to
-	contribute to the seminar by doing research and presenting the
-	results to the seminar. Prerequisites: \textsc{bsth} 101, 102, 201
-	and 270.
-
-	\textsc{bsth} 3153: Survey of especially the wisdom literature of
-	the Old Testament, which may cover Job, Proverbs, Ecclesiastes and
-	Song of Songs and should address the role of wisdom in Israelite
-	religion and culture. Comparison will be made with wisdom texts in
-	the Apocrypha and Ancient Near East. Other texts from the Writings
-	may also be included. Prerequisites: \textsc{bsth} 101, 102, 201.
-
+	A seminar style course involves the advanced study of a particular
+	topic or figure in biblical theology that will change from year to
+	year. It can be taken more than once for credit, provided that the
+	topics are different. Students will be expected to contribute to the
+	seminar by doing research and presenting the results to the seminar.
+	Prerequisites: \textsc{bsth} 101, 102, 201 and 270.
 }% end of course description
+\objectives{% recall Bloom's taxonomy: http://www.celt.iastate.edu/teaching/RevisedBlooms1.html
+
+In this course Ecclesiastes will be studied in the context of other
+biblical literature, with some reference to extra-biblical sources, and
+in connection with the book's reception history. By the end of the
+course students should be able to:
+	list biblical books classified with the Writings and wisdom literature;
+	understand differences in the way this literature is classified;
+	give examples of extra-biblical parallels to wisdom literature;
+	locate Ecclesiastes relative to other Solomonic literature;
+	recognize quotes from Ecclesiastes by chapter;
+	name major ancient and modern commentators on Ecclesiastes;
+	report on specific commentators verbally;
+	articulate interpretive options in reading Ecclesiastes;
+	defend their own preferred readings in writing, with detailed textual support.
+
+}% end of learning objectives
 
 \input{\incl/preamble}
 
 \begin{document}
 \input{\incl/title}
-
-\section{Learning Outcomes}
-\label{outcomes}
-
-% A Model of Learning Objectives
-% Adapted from http://www.celt.iastate.edu/teaching/RevisedBlooms1.html
-%
-% A learning objective should contain a *subject* (a verb related to
-% cognitive process) and an *object* (a noun identifying the knowledge
-% or skill sought). Statements should be precise and measurable, e.g.,
-% "By the end of this course, students will be able to <verb> <noun>."
-%
-% Anderson and Krathwohl name four *classes of knowledge* that students
-% can be expected to acquire. Terms move from the concrete to the
-% abstract:
-%
-%   1. factual           (basic elements, details, terminology)
-%   2. conceptual        (interrelationship of basic elements)
-%   3. procedural        (skills, methods, techniques, criteria)
-%   4. metacognitive     (strategy, context and conditions, self-knowledge)
-%
-% Metacognitive knowledge is a special case. It concerns one's own
-% "cognition and about oneself in relation to various subject matters"
-% (Anderson and Krathwohl, 2001, p.44).
-%
-% A&K also identify 19 *cognitive processes*, arranged in six categories
-% (a 2001 revision of Bloom's 1957 taxonomy) that progress from lower
-% order to higher order thinking skills (from LOTS to HOTS):
-%
-%   1. remember
-%      * recognizing     (identifying)
-%      * recalling       (retrieving)
-%   2. understand
-%      * interpreting    (clarifying, paraphrasing, representing, translating)
-%      * exemplifying    (illustrating, instantiating)
-%      * classifying     (categorizing, subsuming)
-%      * summarizing     (abstracting, generalizing)
-%      * inferring       (concluding, extrapolating, interpolating, predicting)
-%      * comparing       (contrasting, mapping, matching)
-%      * explaining      (constructing models)
-%   3. apply
-%      * executing       (carrying out)
-%      * implementing    (using)
-%   4. analyze
-%      * differentiating (discriminating, distinguishing, focusing, selecting)
-%      * organizing      (finding coherence, integrating, outlining, parsing, structuring)
-%      * attributing     (deconstructing)
-%   5. evaluate
-%      * checking        (coordinating, detecting, monitoring, testing)
-%      * critiquing      (judging)
-%   6. create
-%      * generating      (hypothesizing)
-%      * planning        (designing)
-%      * producing       (constructing)
-%
-% If you reference a List of Measurable Verbs Used to Assess Learning
-% Outcomes, remember that A&K reverse Bloom's 6th and 5th categories.
-
-The learning outcomes for this course are in part a function of each
-student's ability to meet specific objectives. By the
-end of the course students should be able to:
-	list biblical books classified with the Writings (in the Tanak) and wisdom literature;
-	understand differences in the way this literature is classified;
-	give examples of extra-biblical parallels to wisdom literature;
-	locate Ecclesiastes relative to other Solomonic literature;
-	recognize quotes from Ecclesiastes by chapter;
-	name major commentators on Ecclesiastes, ancient and modern;
-	report on specific commentators verbally, to the rest of the class;
-	articulate interpretive options in reading Ecclesiastes;
-	defend their own preferred readings in writing, with detailed textual support.
 
 \section{Required Texts \& Materials}
 \label{texts}
@@ -162,10 +99,50 @@ be recommended and placed on the course website as the semester
 progresses. Students are encouraged to pursue secondary literature on
 their own as well.
 
+\section{Course Outline}
+\label{outline}
+
+Readings should be completed before the start of the class for which
+they are assigned. We will adhere to the schedule as closely as
+possible, though I reserve the right to adjust it to suit the needs of
+the class.
+
+\setcolumncount{4}% set up \sessioncount, \unit{}, \noclass{}, and \reminder{memo}{date} macros
+\begin{table}[htb]% add p to put the schedule on its own page
+  \centering
+  \begin{tabular}{>{\sessioncount.}r@{ }llr}% make sure the column config agrees with \setcolumncount
+	\toprule
+	\sessionskip{\textbf{\S}.}&\textbf{Seminar Text}&\textbf{Secondary Reading}&\textbf{Date}\\
+	\midrule
+	& Ecclesiastes \thesession & Christianson 17--86, 87--155             & 11 Sept. \\
+	& Ecclesiastes \thesession & Christianson 156--163, Dell 9--36        & 18 Sept. \\
+	& Ecclesiastes \thesession & Christianson 164--179, Dell 37--56       & 25 Sept. \\
+	& Ecclesiastes \thesession & Christianson 180--183, Keymer on Johnson &  2 Oct.  \\
+	& Ecclesiastes \thesession & Christianson 183--185, Johnson Ch 1--9   &  9 Oct.  \\
+	& Ecclesiastes \thesession & Christianson 184--187, Johnson Ch 10--19 & 16 Oct.  \\
+	\noclass{Reading Day}                                                 & 23 Oct.  \\
+	& Ecclesiastes \thesession & Christianson 188--201 + Case Studies     & 30 Oct.  \\
+	& Ecclesiastes \thesession & Christianson 201--205 + Case Studies     &  6 Nov.  \\
+	& Ecclesiastes \thesession & Christianson 206--215, Dell 59--67       & 13 Nov.  \\
+	& Ecclesiastes \thesession & Christianson 216--224, Dell 68--75       & 20 Nov.  \\
+	& Ecclesiastes \thesession & Christianson 225--246, Dell 76--83       & 27 Nov.  \\
+	& Ecclesiastes \thesession & Christianson 247--263, Dell 84--95       &  4 Dec.  \\
+	\reminder{\textbf{Final Exam} (as schedule by the Registrar)}{9--16 Dec.}        \\
+	\bottomrule
+  \end{tabular}
+  \caption{Schedule of Readings}
+  \label{schedule}
+\end{table}
+
+See the Registrar's website for a list of other
+\href{http://www.tyndale.ca/registrar/important-dates}{important dates}.
+The last day to add a class, or to drop one without penalty, is
+ordinarily the end of the term's second week.
+
 \section{Evaluation}
 \label{evaluation}
 
-\subsection{Grade Structure for BSTH 4403/3153}% \ccode doesn't work with the cross-listing
+\subsection{Grade Structure for \ccode}
 \label{structure}
 
 \begin{enumerate}
@@ -205,10 +182,9 @@ their own as well.
 	\item In weeks 7 and 8 students are to present a \textbf{case study}
 	to the class. In 12 minutes you must report on and analyze a
 	specific instance of the reception of Ecclesiasted in art,
-	literature, film, history, theology, philosophy, or public discourse
-	(3153 students may use Johnson's \emph{Rasselas} as their case
-	study). Use half your time for description and summary, and half for
-	analysis and critique. Presentations will be evaluated for the
+	literature, film, history, theology, philosophy, or public
+	discourse. Use half your time for description and summary, and half
+	for analysis and critique. Presentations will be evaluated for the
 	quality of the selection, and the depth of analysis.
 
 	\item A comprehensive \textbf{final paper} is due at the start of
@@ -217,17 +193,11 @@ their own as well.
 
 	\begin{enumerate}
 
-		\item For \textbf{4403} students are to write an exegetical
-		analysis of one chapter of Ecclesiastes. In 16--20 pages, these
-		papers must advance a thesis about the text and must
-		demonstrate, through careful citation, a thorough awareness of
-		relevant commentary and scholarly literature.
-
-		\item For \textbf{3153} students must give a more general
-		account of Ecclesiastes either in the context of the Writings or
-		of wisdom literature. In 10--12 pages, these papers must cite
-		assigned textbooks and other literature as appropriate, and
-		should make plentiful reference to the text of Ecclesiastes.
+		\item Students are to write an exegetical analysis of (part of)
+		Ecclesiastes. In 16--20 pages, each paper must advance a thesis
+		about the text and must demonstrate, through careful citation, a
+		thorough awareness of relevant commentary and scholarly
+		literature.
 
 		\item The instructor may set deadlines for drafts in the second
 		part of the semester, and may host a peer review or offer bonus
@@ -273,46 +243,6 @@ The breakdown for the semester's total work is as follows:
 \input{\policy/technology}
 
 \input{\policy/support}
-
-\section{Course Outline}
-\label{outline}
-
-Readings should be completed before the start of the class for which
-they are assigned. We will adhere to the schedule as closely as
-possible, though I reserve the right to adjust it to suit the needs of
-the class.
-
-\setcolumncount{4}% set up \sessioncount, \unit{}, \noclass{}, and \reminder{memo}{date} macros
-\begin{table}[htb]% add p to put the schedule on its own page
-  \centering
-  \begin{tabular}{>{\sessioncount.}r@{ }llr}% make sure the column config agrees with \setcolumncount
-	\toprule
-	\sessionskip{\textbf{\S}.}&\textbf{Seminar Text}&\textbf{Secondary Reading}&\textbf{Date}\\
-	\midrule
-	& Ecclesiastes \thesession & Christianson 17--86, 87--155             & 11 Sept. \\
-	& Ecclesiastes \thesession & Christianson 156--163, Dell 9--36        & 18 Sept. \\
-	& Ecclesiastes \thesession & Christianson 164--179, Dell 37--56       & 25 Sept. \\
-	& Ecclesiastes \thesession & Christianson 180--183, Keymer on Johnson &  2 Oct.  \\
-	& Ecclesiastes \thesession & Christianson 183--185, Johnson Ch 1--9   &  9 Oct.  \\
-	& Ecclesiastes \thesession & Christianson 184--187, Johnson Ch 10--19 & 16 Oct.  \\
-	\noclass{Reading Day}                                                 & 23 Oct.  \\
-	& Ecclesiastes \thesession & Christianson 188--201 + Case Studies     & 30 Oct.  \\
-	& Ecclesiastes \thesession & Christianson 201--205 + Case Studies     &  6 Nov.  \\
-	& Ecclesiastes \thesession & Christianson 206--215, Dell 59--67       & 13 Nov.  \\
-	& Ecclesiastes \thesession & Christianson 216--224, Dell 68--75       & 20 Nov.  \\
-	& Ecclesiastes \thesession & Christianson 225--246, Dell 76--83       & 27 Nov.  \\
-	& Ecclesiastes \thesession & Christianson 247--263, Dell 84--95       &  4 Dec.  \\
-	\reminder{\textbf{Final Exam} (as schedule by the Registrar)}{9--16 Dec.}        \\
-	\bottomrule
-  \end{tabular}
-  \caption{Schedule of Readings}
-  \label{schedule}
-\end{table}
-
-See the Registrar's website for a list of other
-\href{http://www.tyndale.ca/registrar/important-dates}{important dates}.
-The last day to add a class, or to drop one without penalty, is
-ordinarily the end of the term's second week.
 
 \section{Course Bibliography}
 \label{bibliography}
